# gnome-musician

./: .buildconfig  configure.ac
src/: Makefile.am  musician-enums.c.in  musician-enums.h.in  musician-gp4-parser.c  musician-gp4-parser.h  musician-gpt-beat.c  musician-gpt-beat.h  musician-gpt-bend.c  musician-gpt-bend.h  musician-gpt-chord.c  musician-gpt-chord.h  musician-gpt-input-stream.c  musician-gpt-input-stream.h  musician-gpt-lyrics.c  musician-gpt-lyrics.h  musician-gpt-measure.c  musician-gpt-measure.h  musician-gpt-parser.c  musician-gpt-parser.h  musician-gpt-song-private.h  musician-gpt-song.c  musician-gpt-song.h  musician-gpt-track.c  musician-gpt-track.h  musician-gpt-types.h  musician.h  old.c
tests/: Makefile.am  test-gpt-parser.c
tests/data/: test1.gp5
